# pg-vector-ingester

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pg_ingester/: config.py  db.py  embedder.py  loader.py  main.py  models.py  schemas.py
